--- a/views/index.ejs
+++ b/views/index.ejs
@@ -185,14 +185,14 @@
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Impresión de etiquetas</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
 
-                    <button class="btn btn-primary" onclick="print('Etiquetas')">Generar PDF</button>
+                    <button class="btn btn-primary" onclick="print('Etiquetas')">Imprimir</button>
                     <center>
                         <div id="Etiquetas" style="min-width: 180mm; font-family: 'Arial Narrow'; font-size: 10px">
                             <table id="" class="table  table-bordered" style="width: 75%">
@@ -227,8 +227,8 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                  
                 </div>
             </div>
         </div>
@@ -287,7 +287,7 @@
         border: 2px solid black;
         padding: 10px;
         text-align: center;
-        width: 5.25cm margin: 5px 5px 5px 5px;
+        width: 5.25cm margin 5px 5px 5px 5px;
     }
 
     #rcorners1 {
